Fixed wrapping

--- a/style.css
+++ b/style.css
@@ -118,9 +118,8 @@ a {
 }
 
 .container {
-  /* width: min(1110px, 100% - 1rem); */
+  width: min(1110px, 100% - 1rem);
   max-width: 100%;
-  width: 1110px;
   margin-inline: auto;
   padding: 4rem 0;
   display: flex;
@@ -173,7 +172,7 @@ a {
 /* First section */
 
 .first-section div {
-  width: 50%;
+  width: 555px;
 }
 
 .section-header {
@@ -193,7 +192,7 @@ a {
 /* Second section */
 
 .second-section div {
-  width: 50%;
+  width: 555px;
 }
 
 .second-section div h2 {
@@ -232,7 +231,7 @@ a {
 }
 
 .cta-heading {
-  width: 50%;
+  width: 555px;
   color: var(--clr-neutral-lightgray);
 }
 
@@ -263,6 +262,7 @@ a {
 .footer-nav-links li {
   color: var(--clr-neutral-lightgray);
   font-size: var(--font-size-400);
+  padding: 0 3rem;
 }
 
 .email-input {
